fix: Update white-space and overflow-wrap properties in Message.svelte and skin.css

--- a/src/styles/skin.css
+++ b/src/styles/skin.css
@@ -159,6 +159,9 @@
 
 			transition: all 0.3s ease-in-out;
 
+			white-space: pre-wrap;
+			overflow-wrap: break-word;
+
 			&.naked {
 				border-color: transparent;
 			}
@@ -200,14 +203,14 @@
 			@apply text-gray-700 bg-gray-200;
 			@apply dark:bg-gray-900/40 dark:text-gray-100;
 			@apply flex place-items-center;
-			padding-left: 0.5rem  ;
-			padding-right: 0.5rem  ;
+			padding-left: 0.5rem;
+			padding-right: 0.5rem;
 			min-height: 24px;
 		}
 
 		&.btn-big {
-			padding-left: 2rem  ;
-			padding-right: 2rem  ;
+			padding-left: 2rem;
+			padding-right: 2rem;
 		}
 
 		&.btn-link {
